[gd_scene load_steps=8 format=3 uid="uid://dtj58xwkgmti8"]

[ext_resource type="Script" path="res://MainGame/Player.gd" id="1_3ok1d"]
[ext_resource type="AudioStream" uid="uid://d31sdwmj5nctf" path="res://MainGame/SoundEffects/Shot.wav" id="2_2lo1h"]
[ext_resource type="AudioStream" uid="uid://bp86baaa7jbmm" path="res://MainGame/SoundEffects/Hurt.wav" id="3_0hw57"]
[ext_resource type="AudioStream" uid="uid://o25vumvpllg6" path="res://MainGame/SoundEffects/Hit.wav" id="4_i6hdy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_figho"]
radius = 0.519702

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vkgkl"]
albedo_color = Color(0.984314, 0.831373, 0.113725, 1)
metallic = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_cibx0"]
material = SubResource("StandardMaterial3D_vkgkl")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3ok1d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_figho")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_cibx0")

[node name="ShootNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2lo1h")
volume_db = -20.0

[node name="HurtNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0hw57")
volume_db = -20.0

[node name="ShotNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i6hdy")
volume_db = -10.0
